# sound-level-indicator

./: README.md  sound-level-indicator.cabal
src/: Main.hs  MicChan.hs
