name:                sound-level-indicator
version:             0.1.0.0
synopsis:            A simple command-line sound level indicator.
description:         Shows the sound level as picked up by the system
                     default mic.
homepage:            https://github.com/martinvlk/sound-level-indicator
license:             GPL-3
license-file:        LICENSE
author:              Martin Vlk
maintainer:          martin@vlkk.cz
category:            Sound
build-type:          Simple
cabal-version:       >=1.10

executable sound-level-indicator
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , monad-loops
                     , pulse-simple
                     , stm
                     , transformers
                     , ncurses
                     , time
  hs-source-dirs:      src
  default-language:    Haskell2010
